# better-than-nothing

./: .gitignore  CMakeLists.txt  LICENSE.md  LICENSE.txt  Makefile  README.md
.build/debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
.build/debug/.cmake/api/v1/reply/: cache-v2-e5764f485f8ccdea7cc8.json  cmakeFiles-v1-5465062ee916ccbd12a9.json  codemodel-v2-84db738a51bdf7301e30.json  directory-Modules.Core-Debug-d495d12e02415fe3bc54.json  directory-Modules.Runtime-Debug-d0f9b7414b02e4e55a5a.json  directory-ThirdParty.entt-Debug-6ed1a444c5ef6f1f7cd1.json  directory-ThirdParty.glfw-Debug-04812973ae9c28f74396.json  directory-ThirdParty.glm.include-Debug-fbcf02a62a1b74ff71d7.json  directory-ThirdParty.glslang.glslang-Debug-d76f112a9163e0301d81.json  directory-ThirdParty.imgui-Debug-ff1d8a3af2800fabd09d.json  (+20 more)
.build/debug/Modules/Core/: cmake_install.cmake
.build/debug/Modules/Runtime/: cmake_install.cmake
.build/debug/include/glslang/: build_info.h
.build/release/: CMakeCache.txt  build.ninja  cmake_install.cmake
.build/release/Modules/Core/: cmake_install.cmake
.build/release/Modules/Runtime/: cmake_install.cmake
.github/workflows/: build.yml
Better-than-Nothing/Modules/: pch.hpp
Better-than-Nothing/Modules/Core/: CMakeLists.txt
Better-than-Nothing/Modules/Core/src/: Application.cpp  Application.hpp  Device.cpp  Device.hpp
Better-than-Nothing/Modules/Core/src/Renderer/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DescriptorPool.cpp  DescriptorPool.hpp  ImGuiDescriptorPool.cpp  ImGuiDescriptorPool.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  UniformsPool.cpp  UniformsPool.hpp
Better-than-Nothing/Modules/Core/src/Resources/: ModelPool.cpp  ModelPool.hpp  ResourceManager.cpp  ResourceManager.hpp  ShaderPool.cpp  ShaderPool.hpp  TexturePool.cpp  TexturePool.hpp
Better-than-Nothing/Modules/Core/src/Scene/: Camera.cpp  Camera.hpp  Scene.cpp  Scene.hpp
Better-than-Nothing/Modules/Core/src/Utils/: Input.hpp
Better-than-Nothing/Modules/Runtime/: CMakeLists.txt
Modules/: pch.hpp
Modules/Core/: CMakeLists.txt
Modules/Core/src/: Application.cpp  Application.hpp
Modules/Core/src/Events/: EventDispatcher.hpp  KeyEvent.hpp
Modules/Core/src/Renderer/: DescriptorPool.cpp  DrawStream.cpp  Material.hpp  Pipeline.cpp  Renderer.cpp  RendererDebugInfo.hpp
Modules/Core/src/Resources/: ResourceManager.cpp  ShaderPool.cpp  TexturePool.cpp  TexturePool.hpp
Modules/Core/src/Scene/: Camera.cpp  Scene.cpp
Modules/Core/src/Utils/: ConfigManager.cpp  Input.cpp
Modules/Runtime/: CMakeLists.txt
Modules/Runtime/src/: Runtime.cpp
Sources/: pch.hpp
Sources/Core/: CMakeLists.txt
Sources/Core/src/: Application.cpp  Application.hpp  ApplicationContext.cpp  ApplicationContext.hpp  BetterThanNothing.hpp  EntryPoint.cpp  Window.cpp  Window.hpp
Sources/Core/src/Containers/: DependencyGraph.hpp
Sources/Core/src/Events/: Event.hpp  WindowCloseEvent.hpp
Sources/Core/src/Graphics/: Renderer.cpp  Renderer.hpp  ShaderPool.cpp  ShaderPool.hpp  Vertex.hpp  Window.cpp  Window.hpp
Sources/Core/src/Graphics/Vulkan/: VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferFactory.cpp  VulkanBufferFactory.hpp  VulkanBufferType.hpp  VulkanBufferingMode.hpp  VulkanBufferingType.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFence.cpp  VulkanFence.hpp  VulkanFramebuffer.cpp  VulkanImageView.cpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanQueue.cpp  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanShaderModule.cpp  VulkanShaderModule.hpp  VulkanShaderType.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp
Sources/Core/src/Jobs/: Job.hpp  JobGraph.hpp  JobManager.hpp
Sources/Core/src/RAII/: Window.cpp  Window.hpp
Sources/Core/src/RAII/Glfw/: GlfwWindow.cpp  GlfwWindow.hpp
Sources/Core/src/RAII/Vulkan/: VulkanDevice.cpp  VulkanDevice.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.hpp  VulkanQueue.cpp  VulkanQueue.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapChain.cpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
Sources/Core/src/Renderer/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  DrawStream.hpp  DynamicUniforms.hpp  GlobalUniforms.hpp  ImGuiDescriptorPool.cpp  RenderPass.cpp  Renderer.cpp  RendererDebugInfo.hpp  SwapChain.cpp
Sources/Core/src/Resources/: Audio.hpp  AudioPool.cpp  AudioPool.hpp  Model.hpp  ModelPool.cpp  ModelPool.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourcePool.hpp  ShaderPool.hpp
Sources/Core/src/Scene/: Camera.cpp  Camera.hpp  Scene.hpp
Sources/Core/src/Scene/Components/: ModelComponent.hpp
Sources/Core/src/Utils/: DependencyGraph.hpp  Input.cpp  Input.hpp  JobManager.cpp  JobManager.hpp  ShaderPool.cpp  ShaderPool.hpp
Sources/Core/src/Vulkan/: VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanImageView.hpp  VulkanInstance.cpp  VulkanRenderPass.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSemaphore.cpp  VulkanSemaphore.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp
Sources/Runtime/: CMakeLists.txt
Sources/Runtime/src/: Runtime.cpp  Runtime.hpp
(+27 files in other folders)
